stylesheets/omnisharp-atom.less
// The ui-variables file is provided by base themes provided by Atom.
//
// See https://github.com/atom/atom-dark-ui/blob/master/stylesheets/ui-variables.less
// for a full listing of what's available.
@import "ui-variables";
@import "octicon-mixins";

.omnisharp-atom-pane {
  position:relative;
  padding:0px !important;
  margin:0px;

  .background-message {
    color:  @text-color-subtle;
    kbd {
      font-size:inherit;
    }
  }
}

.error-output-pane {
}

.build-output-pane-view {
  .navigate-link {
    cursor: pointer;

    &:hover {
      text-decoration: underline;
    }
  }
}

.omnisharp-atom-output-resizer{
  position:absolute;
  height:5px;
  cursor: row-resize;
  z-index:4;
  top:0;
  right:0;
  left:0;
}

.border-flip (@a) when (lightness(@a) >= 50%) {
  border: 1px solid darken(@tool-panel-background-color, 30%);
}
.border-flip (@a) when (lightness(@a) < 50%) {
  border: 1px solid lighten(@tool-panel-background-color, 20%);
}
.omnisharp-atom-button {
  progress {
    margin-top:3px;
    width:40px;
  }
}
.btn-fix {
  top: -2px !important;
}
.messages-container {
  height:150px;
  overflow-y: scroll;
}
.omnisharp-atom-output {
  overflow-y: scroll;
  height:150px;
  position:relative;
  .error-table {
    width:100%;
    line-height: 1.42;
    th {
      .border-flip(@tool-panel-background-color);
      border-top: 1px solid transparent;
      padding:2px;
      padding-top:0px;
    }
    tr.selected {
      background-color: @background-color-selected;
    }
    tr:hover {
      background-color: @background-color-selected;
      color: @text-color-selected;
      cursor:pointer;
    }
    td {
    }
  }

  pre {
    background: #161719;
    color: #fff;
    font-size: 10px;
    margin: 0px;
    padding: 0px;
    border:none;
  }
  .pending {
    color: @text-color-warning;
  }
  .success {
    color: @text-color-success;
  }
  .fail {
    color: @text-color-error;
  }
}




@red-color: @syntax-color-removed;
@green-color: @syntax-color-added;
@blue-color: @syntax-color-renamed;

.highlight-green .region {
  background-image: url('atom://omnisharp-atom/stylesheets/wiggle-green.png');
  background-repeat: repeat-x;
  background-position: bottom;
  margin-top: 3px;
}
.highlight-red .region {
  background-image: url('atom://omnisharp-atom/stylesheets/wiggle.png');
  background-repeat: repeat-x;
  background-position: bottom;
  margin-top: 3px;
}

.gutter {
  .gutter-red {

  background-color: rgba(red(@background-color-error), green(@background-color-error), blue(@background-color-error), 0.3) !important;
  background-image: url('atom://omnisharp-atom/stylesheets/wiggle.png');
  background-repeat: repeat-x;
  background-position: bottom;
  }
  .gutter-green {
  background-color: rgba(red(@background-color-success), green(@background-color-success), blue(@background-color-success), 0.3) !important;
  background-image: url('atom://omnisharp-atom/stylesheets/wiggle-green.png');
  background-repeat: repeat-x;
  background-position: bottom;
  }
}

